attempting to fix overflow issue with samasung internet and safari.  change max-width for hovermenu to keep menu from going off screen.

--- a/assets/sass/_topNav.scss
+++ b/assets/sass/_topNav.scss
@@ -201,6 +201,7 @@
                             flex-flow: row;
                             justify-content: space-between;
                             width: 100%;
+                            overflow: auto;
                             .divisionChoice{
                                 ul{
                                     display: flex;
@@ -295,7 +296,7 @@
                         .hoverMenu{
                             top: 6.5rem;
                             .divisionContainer{
-                                width: 737px;
+                                width: 100%;
                                 overflow: auto;
                                 .divisionChoice{
                                     display: none;
@@ -484,11 +485,12 @@
                         font-size: 1rem;
                         padding: .8rem .5rem;
                         .hoverMenu{
+                            max-width: 767px;
                             top: 7rem;
                             width: 100%;
                             .divisionContainer{
                                 width: 100%;
-                                overflow: auto;
+                                // overflow: auto;
                                 .divisionChoice{
                                     display: none;
                                 }
